--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "jest-expo": "~28.0.0",
     "react-native-scripts": "1.14.0",
     "react-test-renderer": "16.3.1",
-    "redux-devtools-extension": "^2.13.2"
+    "remote-redux-devtools": "^0.5.12"
   },
   "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
   "scripts": {
