--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
   },
   "dependencies": {
     "expo": "^28.0.0",
+    "prop-types": "^15.6.1",
     "react": "16.3.1",
     "react-native": "~0.55.2",
+    "react-navigation": "^2.3.1",
     "react-redux": "^5.0.7",
     "redux": "^3.1.0",
     "redux-saga": "^0.16.0"
