--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "babel-eslint": "^8.2.3",
     "eslint": "^4.19.1",
     "eslint-plugin-react": "^7.9.1",
+    "expo-cli": "^2.2.0",
     "jest-expo": "~28.0.0",
     "react-native-scripts": "1.14.0",
     "react-test-renderer": "16.3.1",
